Bug 1002466 - Use SK_ScalarNearlyZero instead of 0.0f to render dots r=mattwoodrow